Bug 381368 - "do not show again" from system configuration problems dialog is not remembered
Summary: "do not show again" from system configuration problems dialog is not remembered
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: GUI/Usability (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: K3b Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-06-18 14:55 UTC by Patrick Silva
Modified: 2017-09-25 01:45 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (96.65 KB, image/png)
2017-06-18 14:55 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2017-06-18 14:55:24 UTC
Created attachment 106155 [details]
screenshot

K3b always shows this dialog no matter I check "do not show again".
Comment 1 Albert Astals Cid 2017-06-18 15:55:32 UTC
do you have frameworkintegration installed?
Comment 2 Patrick Silva 2017-06-18 16:13:15 UTC
Yes, frameworkintegration 5.35.0+p16.04+git20170616.1345-0.
Comment 3 Albert Astals Cid 2017-06-18 16:18:04 UTC
ok
Comment 4 Leslie Zhai 2017-06-19 03:47:52 UTC
Fixed https://git.reviewboard.kde.org/r/130162/ but why QDialogButtonBox::Close could not emit closeEvent?
Comment 5 Leslie Zhai 2017-06-19 08:44:31 UTC
Git commit c1fae2adc90fac9a2af11ec9ef95ecc12033fa41 by Leslie Zhai.
Committed on 19/06/2017 at 08:42.
Pushed by lesliezhai into branch 'master'.

Fix "do not show again" from system configuration problems dialog is not remembered
REVIEW: 130162

M  +5    -6    src/k3bsystemproblemdialog.cpp
M  +1    -1    src/k3bsystemproblemdialog.h

https://commits.kde.org/k3b/c1fae2adc90fac9a2af11ec9ef95ecc12033fa41
Comment 6 Patrick Silva 2017-07-22 05:59:43 UTC
this bug is still happening with k3b 17.08 beta on neon dev stable.
Comment 7 Leslie Zhai 2017-07-22 17:19:53 UTC
(In reply to Dr. Chapatin from comment #6)
> this bug is still happening with k3b 17.08 beta on neon dev stable.

Please review the patch https://git.reviewboard.kde.org/r/130162/
Comment 8 Patrick Silva 2017-07-22 17:32:42 UTC
Sorry, I'm not a software developer.
Comment 9 Leslie Zhai 2017-07-24 01:57:46 UTC
(In reply to Dr. Chapatin from comment #8)
> Sorry, I'm not a software developer.

The patch had been reviewed by Harald Sitter https://twitter.com/apachelogger and I can not reproduce it!
Comment 10 Wolfgang Bauer 2017-07-31 10:49:53 UTC
(In reply to Leslie Zhai from comment #9)
> The patch had been reviewed by Harald Sitter
> https://twitter.com/apachelogger and I can not reproduce it!

The patch works fine AFAICT, the setting is saved correctly now.

But it is not respected it seems.
FWICT, this is the culprit:
    connect( k3bcore->deviceManager(), SIGNAL(changed()), this, SLOT(slotCheckSystemTimed()) );
(src/k3b.cpp, line 261)

This causes K3b::SystemProblemDialog::checkSystem() being called *without* checking the "do not show again" setting.

Removing that line fixes it, but I don't know whether this is a good idea as I don't know why it is there in the first place.

Maybe it would be better to change K3b::MainWindow::slotCheckSystem() to check the setting like it is done in K3b::Application::checkSystemConfig().
But to me it seems that both are called on startup currently, which doesn't really make sense either.

Btw, AFAICS this problem has been introduced in master (but not 2.0.x) years ago already, long before the port to KF5 started.
Comment 11 Wolfgang Bauer 2017-07-31 12:45:59 UTC
PS: for being able to reproduce it, maybe try to remove the mad decoder (/usr/lib64/qt5/plugins/k3bmaddecoder.so and /usr/share/kservices5/k3bmaddecoder.desktop or similar).

That should trigger the dialog on startup and the problem, according to http://bugzilla.opensuse.org/show_bug.cgi?id=1051368 .
Comment 12 Leslie Zhai 2017-08-01 06:29:18 UTC
Git commit 9408b834d4eb20264a526beb3bbbb1c5882db564 by Leslie Zhai.
Committed on 01/08/2017 at 06:24.
Pushed by lesliezhai into branch 'master'.

Add readCheckSystemConfig before checkSystem to fix
 "do not show again" from system configuration problems dialog
 is not remembered issue.

A great patch by Wolfgang Bauer!

M  +8    -5    src/k3bsystemproblemdialog.cpp

https://commits.kde.org/k3b/9408b834d4eb20264a526beb3bbbb1c5882db564
Comment 13 Wolfgang Bauer 2017-08-02 06:33:51 UTC
Well, this fixes the problem reported here, but it also "breaks" the manual check (Help->System Check) if "Check system configuration" is disabled.

I think it would be better to test the setting in K3b::MainWindow::slotCheckSystem() instead.

(the "System Check" menu entry calls K3b::MainWindow::slotManualCheckSystem()...)
Comment 14 Leslie Zhai 2017-08-02 06:45:27 UTC
Git commit 762fc98addfc5a83e80aa1c7d83384a512c48f33 by Leslie Zhai.
Committed on 02/08/2017 at 06:44.
Pushed by lesliezhai into branch 'master'.

Add forceCheck for ManualCheckSystem.

M  +1    -1    src/k3b.cpp
M  +2    -2    src/k3bsystemproblemdialog.cpp
M  +1    -1    src/k3bsystemproblemdialog.h

https://commits.kde.org/k3b/762fc98addfc5a83e80aa1c7d83384a512c48f33
Comment 15 Wolfgang Bauer 2017-08-02 07:43:59 UTC
Seems to be fine now, thank you!
Comment 16 Leslie Zhai 2017-09-25 01:45:40 UTC
*** Bug 384743 has been marked as a duplicate of this bug. ***