Fix "do not show again" from system configuration problems dialog is not remembered

BUG: 381368
REVIEW: 130162